--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,23 @@
 @charset "utf-8";
 
+*{
+	margin:0;
+	padding:0;
+}
+
 body{
-	width:100px;
-	height:100px;
+	overflow: hidden;
+	width:100%;
+	height:100%;
+}
+img {
+	margin-top:-300px;
+	overflow: hidden;
+}
+
+#back{
+	width:100%;
+	height:40px;
+	position: relative;
+	top: -50px;
 }
